unpackaged/main/default/objects/Vehicle_Accident__c/Vehicle_Accident__c.object-meta.xml
<CustomObject>
    <label>Vehicle Accident</label>
    <nameField>
        <displayFormat>VA-{00000}</displayFormat>
        <label>Ref. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Accidents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>