unpackaged/main/default/objects/Vehicle_Accident__c/fields/Accident_Date__c.field-meta.xml
<CustomField>
    <fullName>Accident_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accident Date</label>
    <type>DateTime</type>
</CustomField>