unpackaged/main/default/objects/Vehicle_Accident__c/fields/Accident_Location__c.field-meta.xml
<CustomField>
    <fullName>Accident_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accident Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>