unpackaged/main/default/objects/Vehicle_Accident__c/fields/Accident_Type__c.field-meta.xml
<CustomField>
    <fullName>Accident_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accident Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>