unpackaged/main/default/objects/Vehicle_Accident__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Accidents</relationshipLabel>
    <relationshipName>Vehicle_Accidents</relationshipName>
    <type>Lookup</type>
</CustomField>