unpackaged/main/default/objects/Vehicle_Accident__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>