unpackaged/main/default/objects/Vehicle_Accident__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Accidents (Employee)</relationshipLabel>
    <relationshipName>Vehicle_Accidents1</relationshipName>
    <type>Lookup</type>
</CustomField>