unpackaged/main/default/objects/Vehicle_Accident__c/fields/Operating_Unit__c.field-meta.xml
<CustomField>
    <fullName>Operating_Unit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operating Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>