unpackaged/main/default/objects/Vehicle_Accident__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Vehicle Accidents</relationshipLabel>
    <relationshipName>Vehicle_Accidents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>