unpackaged/main/default/objects/Vehicle_Accident__c/fields/Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Status__c</fullName>
    <formula>Vehicle__r.Vehicle_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Status</label>
    <type>Text</type>
</CustomField>