unpackaged/main/default/objects/Vehicle_Accident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accident_Location__c</columns>
    <columns>Account__c</columns>
    <columns>Area_of_Accident__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>